[gd_scene load_steps=2 format=3 uid="uid://d0155fvsrfl3p"]

[ext_resource type="Script" uid="uid://cxcmgymqlrgkl" path="res://GameItems/Components/softCollision.gd" id="1_dtmpw"]

[node name="SoftCollision" type="Area2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_dtmpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
